# advent-of-code

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
2020/: CMakeLists.txt  README.md
2020/day_01/: report_repair.cpp  report_repair_1.cpp  report_repair_2.cpp
2020/day_02/: password_philosophy.cpp  password_philosophy_1.cpp  password_philosophy_2.cpp
2020/day_03/: toboggan_trajectory.cpp  toboggan_trajectory_1.cpp  toboggan_trajectory_2.cpp
2020/day_04/: passport_processing.cpp  passport_processing_1.cpp  passport_processing_2.cpp
2020/day_05/: binary_boarding.cpp  binary_boarding_1.cpp  binary_boarding_2.cpp
2020/day_06/: custom_customs.cpp  custom_customs_1.cpp  custom_customs_2.cpp
2020/day_07/: handy_haversacks.cpp
2020/day_08/: handheld_halting.cpp
2020/day_09/: encoding_error.cpp
2020/day_10/: adapter_array.cpp
2020/day_11/: seating_system.cpp
2020/day_12/: rain_risk.cpp
2020/day_13/: shuttle_search.cpp
2020/day_14/: docking_data.cpp
2020/day_15/: rambunctious_recitation.cpp
2020/day_16/: ticket_translation.cpp
2020/day_17/: conway_cubes.cpp  conway_cubes.h
2020/day_18/: operation_order.cpp
2021/: README.md  (+1 more)
2023/: CMakeLists.txt  README.md
2023/day_01/: trebuchet.py
2023/day_02/: cube_conundrum.py
2023/day_03/: gear_ratios.py
2023/day_04/: scratchcards.py
2023/day_05/: if_you_give_a_seed_a_fertilizer.py
2023/day_06/: wait_for_it.py
2023/day_07/: camel_cards.py
2023/day_08/: haunted_wasteland_1.py  haunted_wasteland_2.py
2023/day_09/: mirage_maintenance.py
2023/day_1/: trebuchet.py
2023/day_10/: pipe_maze.py
2023/day_11/: cosmic_expansion.py
(+93 files in other folders)
