# 2020/CMakeLists.txt

add_executable(report_repair day_01/report_repair.cpp)
add_executable(password_philosophy day_02/password_philosophy.cpp)
add_executable(toboggan_trajectory day_03/toboggan_trajectory.cpp)
add_executable(passport_processing day_04/passport_processing.cpp)
add_executable(binary_boarding day_05/binary_boarding.cpp)
add_executable(custom_customs day_06/custom_customs.cpp)
add_executable(handy_haversacks day_07/handy_haversacks.cpp)
add_executable(handheld_halting day_08/handheld_halting.cpp)
add_executable(encoding_error day_09/encoding_error.cpp)
add_executable(adapter_array day_10/adapter_array.cpp)
add_executable(seating_system day_11/seating_system.cpp)
add_executable(rain_risk day_12/rain_risk.cpp)
add_executable(shuttle_search day_13/shuttle_search.cpp)
add_executable(docking_data day_14/docking_data.cpp)
